2001-10-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c: Win64 pointer fixes

	* win/tkWinWm.c (WinSetIcon): closed channels in the error case.

	* generic/tkBind.c (NameToWindow):
	* generic/tkCmds.c (Tk_WinfoObjCmd):
	* generic/tkInt.decls (TkpScanWindowId):
	* generic/tkIntPlatDecls.h:
	* generic/tkStubInit.c:
	* mac/tkMacPort.h (TkpPrintWindowId,TkpScanWindowId):
	* unix/tkUnixPort.h (TkpPrintWindowId,TkpScanWindowId):
	* unix/tkUnixXId.c (TkpScanWindowId):
	* win/tkWinWindow.c (TkpScanWindowId): Corrected definition of
	TkpScanWindowId to handle situation where types Window and int
	do not have the same number of bits.  CONST-ified too.

	* xlib/X11/X.h: made XID __int64 type for Win64.

	* win/tkWinX.c (TkGetServerInfo): added recognition of Win64.

	* tests/scrollbar.test (scrollbar-6.27): marked knownBug because
	it is skewed by bad dimensions returned by Windows.

	* tests/textDisp.test (textDisp-4.12): corrected test to work
	properly on Windows.

2001-10-12  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/demos/rolodex: Minor updates.
	* library/demos/square: A bit of tidying up...
	* library/demos/tcolor: Rewrote to remove uses of [case], brace-up
	expressions, and not rely on the lines of rgb.txt being well-
	formatted lists!
	* library/demos/timer: Uses [clock clicks -milliseconds] now which
	does not drift rapidly over time; the old version lost more than 5
	seconds over half a minute!  Also improved the spacing on the
	label and disabled those buttons that are not usefully clickable.
	* library/demos/browse: No longer require "browse" to be
	executable and on the path, and use [lsort [glob]] instead of
	[exec ls] to read the directory contents.  Also add slashes to the
	ends of directory entries so people can see what will happen when
	the entry is double-clicked.
	* library/demos/hello, library/demos/ixset: Added comments to make
	Emacs think these are Tcl files.