@@ -1,8 +1,9 @@
+#! /bin/bash -norc
 # This file is an input file used by the GNU "autoconf" program to
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.16.2.7 2001/10/03 22:04:53 hobbs Exp $
+# RCS: @(#) $Id: configure.in,v 1.16.2.8 2001/10/15 21:24:42 hobbs Exp $
 
 AC_INIT(../generic/tk.h)
 
@@ -248,7 +249,15 @@ AC_SUBST(MAKE_LIB)
 AC_SUBST(POST_MAKE_LIB)
 AC_SUBST(MAKE_DLL)
 AC_SUBST(MAKE_EXE)
-AC_SUBST(TK_XINCLUDES)
-AC_SUBST(XINCLUDES)
+
+# undefined at this point for win
+AC_SUBST(TK_BUILD_LIB_SPEC)
+AC_SUBST(TK_CC_SEARCH_FLAGS)
+AC_SUBST(TK_LD_SEARCH_FLAGS)
+AC_SUBST(TK_LIB_FLAG)
+AC_SUBST(TK_LIB_SPEC)
+AC_SUBST(TK_STUB_LIB_SPEC)
+AC_SUBST(TK_BUILD_STUB_LIB_PATH)
+AC_SUBST(TK_STUB_LIB_PATH)
 
 AC_OUTPUT(Makefile tkConfig.sh)
